# zedm_art_registration

./: CMakeLists.txt  package.xml  pos  requirements.txt
config/: kirurc.rviz
launch/: kirurc.launch
rviz/: kirurc.rviz
scripts/: algos.py  positions  register.py  registration.py  test_fit_affine.py  test_ls_fit.py  test_nearest_ortho.py  test_orig.py  utils.py
src/: color_filter.cpp
