<?xml version="1.0"?>
<package format="2">
  <name>zedm_art_registration</name>
  <version>0.0.0</version>
  <description>The zedm_art_registration package</description>

  <maintainer email="paul.scheikl@kit.edu">Paul Maria Scheikl</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
